###########################################################################
#                 CMake Build File for ICM-HYDRO
#
#    Written By: Zach Cobell
#
###########################################################################
#
# The CMake build system enable ICM-HYDRO to be deployed and built
# in a cross platform environment. 
#
###########################################################################
#...Set the default build type
IF(DEFINED CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of
        build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug
        Release RelWithDebInfo MinSizeRel.")
ELSE()
    SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build,
        options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release
        RelWithDebInfo MinSizeRel.")
ENDIF()
###########################################################################

###########################################################################
#  GENERAL OPTIONS
###########################################################################
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(ICM_HYDRO Fortran)
ENABLE_LANGUAGE( C )

###########################################################################


###########################################################################
#...Put the static libraries in the CMakeFiles folder so they don't
#   contaminate the build directory
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/CMakeFiles)
###########################################################################


###########################################################################
#...Set the version string (used for libraries)
SET(ICMHYDRO_VERSION_MAJOR 24)
SET(ICMHYDRO_VERSION_MINOR  1)
SET(ICMHYDRO_VERSION_PATCH  0)
SET(ICMHYDRO_VERSION_STRING ${ICMHYDRO_VERSION_MAJOR}.${ICMHYDRO_VERSION_MINOR}.${ICMHYDRO_VERSION_PATCH})
###########################################################################


###########################################################################
#...Determine architecture specific parameters
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/architecture.cmake)
###########################################################################


###########################################################################
# ICM_HYDRO
###########################################################################
SET( HYDRO hydro_v${ICMHYDRO_VERSION_STRING} )
ADD_EXECUTABLE( ${HYDRO} 1D_common_array_R.f90
                         1D_common_functions.f90
                         1D_common_init.f90
                         1D_precision.f90
                         1D_R00_arrays_module_20200211.f90
                         1D_R00_arrays_section_module.f90
                         1D_R00_constants.f90
                         1D_R00_create_I2_20200113.f90
                         1D_R00_dsbc.f90
                         1D_R00_FINE1D.f90 
                         1D_R00_matrix.f90
                         1D_R00_matrixc.f90
                         1D_R00_matrixp.f90
                         1D_R00_mesh_20200211.f90
                         1D_R00_mod_arrays_FINE.f90
                         1D_R00_mod_arrays_SAL.f90
                         1D_R00_mod_arrays_SAND.f90
                         1D_R00_mod_arrays_TMP.f90
                         1D_R00_params_FINE.f90
                         1D_R00_params_SAL.f90
                         1D_R00_params_SAND.f90
                         1D_R00_params_TMP.f90
                         1D_R00_readXsection_20200113.f90
                         1D_R00_SAL1D.f90
                         1D_R00_SAND1D.f90
                         1D_R00_secpred_noI2Calculation_20200127.f90
                         1D_R00_section_noI2Calculation_20200127.f90
                         1D_R00_sed_properties_FINE.f90
                         1D_R00_sed_properties_SAL.f90
                         1D_R00_sed_properties_SAND.f90
                         1D_R00_sed_properties_TMP.f90
                         1D_R00_sgate.f90
                         1D_R00_TMP1D.f90
                         1D_R00_var.f90
                         1D_R00_weir.f90
                         1D_R00_weirp.f90
                         1D_R00_xsec_attribute_module_20200113.f90
                         1D_R01_arrays_module_20200211.f90
                         1D_R01_arrays_section_module.f90
                         1D_R01_constants.f90
                         1D_R01_create_I2_20200113.f90
                         1D_R01_dsbc.f90
                         1D_R01_FINE1D.f90
                         1D_R01_matrix.f90
                         1D_R01_matrixc.f90
                         1D_R01_matrixp.f90
                         1D_R01_mesh_20200211.f90
                         1D_R01_mod_arrays_FINE.f90
                         1D_R01_mod_arrays_SAL.f90
                         1D_R01_mod_arrays_SAND.f90
                         1D_R01_mod_arrays_TMP.f90
                         1D_R01_params_FINE.f90
                         1D_R01_params_SAL.f90
                         1D_R01_params_SAND.f90
                         1D_R01_params_TMP.f90
                         1D_R01_readXsection_20200113.f90
                         1D_R01_SAL1D.f90
                         1D_R01_SAND1D.f90
                         1D_R01_secpred_noI2Calculation_20200127.f90
                         1D_R01_section_noI2Calculation_20200127.f90
                         1D_R01_sed_properties_FINE.f90
                         1D_R01_sed_properties_SAL.f90
                         1D_R01_sed_properties_SAND.f90
                         1D_R01_sed_properties_TMP.f90
                         1D_R01_sgate.f90
                         1D_R01_TMP1D.f90
                         1D_R01_var.f90
                         1D_R01_weir.f90
                         1D_R01_weirp.f90
                         1D_R01_xsec_attribute_module_20200113.f90
                         1D_R02_arrays_module_20200211.f90
                         1D_R02_arrays_section_module.f90
                         1D_R02_constants.f90
                         1D_R02_create_I2_20200113.f90
                         1D_R02_dsbc.f90
                         1D_R02_FINE1D.f90
                         1D_R02_matrix.f90
                         1D_R02_matrixc.f90
                         1D_R02_matrixp.f90
                         1D_R02_mesh_20200211.f90
                         1D_R02_mod_arrays_FINE.f90
                         1D_R02_mod_arrays_SAL.f90
                         1D_R02_mod_arrays_SAND.f90
                         1D_R02_mod_arrays_TMP.f90
                         1D_R02_params_FINE.f90
                         1D_R02_params_SAL.f90
                         1D_R02_params_SAND.f90
                         1D_R02_params_TMP.f90
                         1D_R02_readXsection_20200113.f90
                         1D_R02_SAL1D.f90
                         1D_R02_SAND1D.f90
                         1D_R02_secpred_noI2Calculation_20200127.f90
                         1D_R02_section_noI2Calculation_20200127.f90
                         1D_R02_sed_properties_FINE.f90
                         1D_R02_sed_properties_SAL.f90
                         1D_R02_sed_properties_SAND.f90
                         1D_R02_sed_properties_TMP.f90
                         1D_R02_sgate.f90
                         1D_R02_TMP1D.f90
                         1D_R02_var.f90
                         1D_R02_weir.f90
                         1D_R02_weirp.f90
                         1D_R02_xsec_attribute_module_20200113.f90
                         1D_R03_arrays_module_20200211.f90
                         1D_R03_arrays_section_module.f90
                         1D_R03_constants.f90
                         1D_R03_create_I2_20200113.f90
                         1D_R03_dsbc.f90
                         1D_R03_FINE1D.f90
                         1D_R03_matrix.f90
                         1D_R03_matrixc.f90
                         1D_R03_matrixp.f90
                         1D_R03_mesh_20200211.f90
                         1D_R03_mod_arrays_FINE.f90
                         1D_R03_mod_arrays_SAL.f90
                         1D_R03_mod_arrays_SAND.f90
                         1D_R03_mod_arrays_TMP.f90
                         1D_R03_params_FINE.f90
                         1D_R03_params_SAL.f90
                         1D_R03_params_SAND.f90
                         1D_R03_params_TMP.f90
                         1D_R03_readXsection_20200113.f90
                         1D_R03_SAL1D.f90
                         1D_R03_SAND1D.f90
                         1D_R03_secpred_noI2Calculation_20200127.f90
                         1D_R03_section_noI2Calculation_20200127.f90
                         1D_R03_sed_properties_FINE.f90
                         1D_R03_sed_properties_SAL.f90
                         1D_R03_sed_properties_SAND.f90
                         1D_R03_sed_properties_TMP.f90
                         1D_R03_sgate.f90
                         1D_R03_TMP1D.f90
                         1D_R03_var.f90
                         1D_R03_weir.f90
                         1D_R03_weirp.f90
                         1D_R03_xsec_attribute_module_20200113.f90
                         1D_R04_arrays_module_20200211.f90
                         1D_R04_arrays_section_module.f90
                         1D_R04_constants.f90
                         1D_R04_create_I2_20200113.f90
                         1D_R04_dsbc.f90
                         1D_R04_FINE1D.f90
                         1D_R04_matrix.f90
                         1D_R04_matrixc.f90
                         1D_R04_matrixp.f90
                         1D_R04_mesh_20200211.f90
                         1D_R04_mod_arrays_FINE.f90
                         1D_R04_mod_arrays_SAL.f90
                         1D_R04_mod_arrays_SAND.f90
                         1D_R04_mod_arrays_TMP.f90
                         1D_R04_params_FINE.f90
                         1D_R04_params_SAL.f90
                         1D_R04_params_SAND.f90
                         1D_R04_params_TMP.f90
                         1D_R04_readXsection_20200113.f90
                         1D_R04_SAL1D.f90
                         1D_R04_SAND1D.f90
                         1D_R04_secpred_noI2Calculation_20200127.f90
                         1D_R04_section_noI2Calculation_20200127.f90
                         1D_R04_sed_properties_FINE.f90
                         1D_R04_sed_properties_SAL.f90
                         1D_R04_sed_properties_SAND.f90
                         1D_R04_sed_properties_TMP.f90
                         1D_R04_sgate.f90
                         1D_R04_TMP1D.f90
                         1D_R04_var.f90
                         1D_R04_weir.f90
                         1D_R04_weirp.f90
                         1D_R04_xsec_attribute_module_20200113.f90
                         1D_R05_arrays_module_20200211.f90
                         1D_R05_arrays_section_module.f90
                         1D_R05_constants.f90
                         1D_R05_create_I2_20200113.f90
                         1D_R05_dsbc.f90
                         1D_R05_FINE1D.f90
                         1D_R05_matrix.f90
                         1D_R05_matrixc.f90
                         1D_R05_matrixp.f90
                         1D_R05_mesh_20200211.f90
                         1D_R05_mod_arrays_FINE.f90
                         1D_R05_mod_arrays_SAL.f90
                         1D_R05_mod_arrays_SAND.f90
                         1D_R05_mod_arrays_TMP.f90
                         1D_R05_params_FINE.f90
                         1D_R05_params_SAL.f90
                         1D_R05_params_SAND.f90
                         1D_R05_params_TMP.f90
                         1D_R05_readXsection_20200113.f90
                         1D_R05_SAL1D.f90
                         1D_R05_SAND1D.f90
                         1D_R05_secpred_noI2Calculation_20200127.f90
                         1D_R05_section_noI2Calculation_20200127.f90
                         1D_R05_sed_properties_FINE.f90
                         1D_R05_sed_properties_SAL.f90
                         1D_R05_sed_properties_SAND.f90
                         1D_R05_sed_properties_TMP.f90
                         1D_R05_sgate.f90
                         1D_R05_TMP1D.f90
                         1D_R05_var.f90
                         1D_R05_weir.f90
                         1D_R05_weirp.f90
                         1D_R05_xsec_attribute_module_20200113.f90
                         1D_R06_arrays_module_20200211.f90
                         1D_R06_arrays_section_module.f90
                         1D_R06_constants.f90
                         1D_R06_create_I2_20200113.f90
                         1D_R06_dsbc.f90
                         1D_R06_FINE1D.f90
                         1D_R06_matrix.f90
                         1D_R06_matrixc.f90
                         1D_R06_matrixp.f90
                         1D_R06_mesh_20200211.f90
                         1D_R06_mod_arrays_FINE.f90
                         1D_R06_mod_arrays_SAL.f90
                         1D_R06_mod_arrays_SAND.f90
                         1D_R06_mod_arrays_TMP.f90
                         1D_R06_params_FINE.f90
                         1D_R06_params_SAL.f90
                         1D_R06_params_SAND.f90
                         1D_R06_params_TMP.f90
                         1D_R06_readXsection_20200113.f90
                         1D_R06_SAL1D.f90
                         1D_R06_SAND1D.f90
                         1D_R06_secpred_noI2Calculation_20200127.f90
                         1D_R06_section_noI2Calculation_20200127.f90
                         1D_R06_sed_properties_FINE.f90
                         1D_R06_sed_properties_SAL.f90
                         1D_R06_sed_properties_SAND.f90
                         1D_R06_sed_properties_TMP.f90
                         1D_R06_sgate.f90
                         1D_R06_TMP1D.f90
                         1D_R06_var.f90
                         1D_R06_weir.f90
                         1D_R06_weirp.f90
                         1D_R06_xsec_attribute_module_20200113.f90
                         1D_R07_arrays_module_20200211.f90
                         1D_R07_arrays_section_module.f90
                         1D_R07_constants.f90
                         1D_R07_create_I2_20200113.f90
                         1D_R07_dsbc.f90
                         1D_R07_FINE1D.f90
                         1D_R07_matrix.f90
                         1D_R07_matrixc.f90
                         1D_R07_matrixp.f90
                         1D_R07_mesh_20200211.f90
                         1D_R07_mod_arrays_FINE.f90
                         1D_R07_mod_arrays_SAL.f90
                         1D_R07_mod_arrays_SAND.f90
                         1D_R07_mod_arrays_TMP.f90
                         1D_R07_params_FINE.f90
                         1D_R07_params_SAL.f90
                         1D_R07_params_SAND.f90
                         1D_R07_params_TMP.f90
                         1D_R07_readXsection_20200113.f90
                         1D_R07_SAL1D.f90
                         1D_R07_SAND1D.f90
                         1D_R07_secpred_noI2Calculation_20200127.f90
                         1D_R07_section_noI2Calculation_20200127.f90
                         1D_R07_sed_properties_FINE.f90
                         1D_R07_sed_properties_SAL.f90
                         1D_R07_sed_properties_SAND.f90
                         1D_R07_sed_properties_TMP.f90
                         1D_R07_sgate.f90
                         1D_R07_TMP1D.f90
                         1D_R07_var.f90
                         1D_R07_weir.f90
                         1D_R07_weirp.f90
                         1D_R07_xsec_attribute_module_20200113.f90
                         1D_R08_arrays_module_20200211.f90
                         1D_R08_arrays_section_module.f90
                         1D_R08_constants.f90
                         1D_R08_create_I2_20200113.f90
                         1D_R08_dsbc.f90
                         1D_R08_FINE1D.f90
                         1D_R08_matrix.f90
                         1D_R08_matrixc.f90
                         1D_R08_matrixp.f90
                         1D_R08_mesh_20200211.f90
                         1D_R08_mod_arrays_FINE.f90
                         1D_R08_mod_arrays_SAL.f90
                         1D_R08_mod_arrays_SAND.f90
                         1D_R08_mod_arrays_TMP.f90
                         1D_R08_params_FINE.f90
                         1D_R08_params_SAL.f90
                         1D_R08_params_SAND.f90
                         1D_R08_params_TMP.f90
                         1D_R08_readXsection_20200113.f90
                         1D_R08_SAL1D.f90
                         1D_R08_SAND1D.f90
                         1D_R08_secpred_noI2Calculation_20200127.f90
                         1D_R08_section_noI2Calculation_20200127.f90
                         1D_R08_sed_properties_FINE.f90
                         1D_R08_sed_properties_SAL.f90
                         1D_R08_sed_properties_SAND.f90
                         1D_R08_sed_properties_TMP.f90
                         1D_R08_sgate.f90
                         1D_R08_TMP1D.f90
                         1D_R08_var.f90
                         1D_R08_weir.f90
                         1D_R08_weirp.f90
                         1D_R08_xsec_attribute_module_20200113.f90
                         1D_R09_arrays_module_20200211.f90
                         1D_R09_arrays_section_module.f90
                         1D_R09_constants.f90
                         1D_R09_create_I2_20200113.f90
                         1D_R09_dsbc.f90
                         1D_R09_FINE1D.f90
                         1D_R09_matrix.f90
                         1D_R09_matrixc.f90
                         1D_R09_matrixp.f90
                         1D_R09_mesh_20200211.f90
                         1D_R09_mod_arrays_FINE.f90
                         1D_R09_mod_arrays_SAL.f90
                         1D_R09_mod_arrays_SAND.f90
                         1D_R09_mod_arrays_TMP.f90
                         1D_R09_params_FINE.f90
                         1D_R09_params_SAL.f90
                         1D_R09_params_SAND.f90
                         1D_R09_params_TMP.f90
                         1D_R09_readXsection_20200113.f90
                         1D_R09_SAL1D.f90
                         1D_R09_SAND1D.f90
                         1D_R09_secpred_noI2Calculation_20200127.f90
                         1D_R09_section_noI2Calculation_20200127.f90
                         1D_R09_sed_properties_FINE.f90
                         1D_R09_sed_properties_SAL.f90
                         1D_R09_sed_properties_SAND.f90
                         1D_R09_sed_properties_TMP.f90
                         1D_R09_sgate.f90
                         1D_R09_TMP1D.f90
                         1D_R09_var.f90
                         1D_R09_weir.f90
                         1D_R09_weirp.f90
                         1D_R09_xsec_attribute_module_20200113.f90
                         1D_spline_func.f90
                         2D_allocate_params.f
                         2D_celldChem.f
                         2D_celldQ.f
                         2D_celldSal.f
                         2D_celldSS.f
                         2D_celldTmp.f
                         2D_chemical.f
                         2D_ChLaP.f
                         2D_deadA.f
                         2D_DIN.f
                         2D_DIP.f
                         2D_DON.f
                         2D_DOP.f
                         2D_DOx.f
                         2D_hydrod.f
                         2D_ICM_formatting.f
                         2D_ICM_InterpolateMonthlyToGrid.f
                         2D_ICM_InterpolateToGrid.f
                         2D_ICM_MapMonthlyToGrid.f
                         2D_ICM_MapToGrid.f
                         2D_ICM_SalinityThreshold_WM.f
                         2D_ICM_summaries.f
                         2D_ICM_TreeConditions_Veg.f
                         2D_infile.f
                         2D_livA.f
                         2D_main.f90
                         2D_NH4.f
                         2D_NO3.f
                         2D_orgN.f
                         2D_params.f
                         2D_photo.f
                         2D_POP.f
                         2D_salinity.f
                         2D_temperature.f
                         2D_tideBC.f
                         2D_TOC.f
                         2D_TP.f
                         2D_TSSolids.f
                         2D_vanRijnSediment.f
                         2D_waves_YV.f )
SET_TARGET_PROPERTIES( ${HYDRO} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/CMakeFiles/mod)
SET_TARGET_PROPERTIES( ${HYDRO} PROPERTIES COMPILE_FLAGS "${Fortran_LINELENGTH_FLAG} ${Fortran_COMPILER_SPECIFIC_FLAG}" )
